[gd_scene load_steps=21 format=2]

[ext_resource path="res://Enemies/crabe.png" type="Texture" id=1]
[ext_resource path="res://HurtBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Crabe.gd" type="Script" id=3]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://HitBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Shadows/LargeShadow.png" type="Texture" id=7]
[ext_resource path="res://SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://wanderControler.tscn" type="PackedScene" id=9]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 60, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 180, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 60, 60 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "crabe",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
height = 17.2793

[sub_resource type="CapsuleShape2D" id=8]
radius = 19.3887
height = 7.07483

[sub_resource type="CircleShape2D" id=9]
radius = 233.947

[sub_resource type="CircleShape2D" id=10]
radius = 9.22203

[sub_resource type="CircleShape2D" id=11]
radius = 11.7751

[node name="Crabe" type="KinematicBody2D"]
position = Vector2( 0.557053, -10.0649 )
scale = Vector2( 0.6, 0.6 )
collision_layer = 16
collision_mask = 3
script = ExtResource( 3 )

[node name="shadow" type="Sprite" parent="."]
position = Vector2( -0.589256, 16.7938 )
texture = ExtResource( 7 )

[node name="Animsprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.20047, -2.47766 )
frames = SubResource( 6 )
animation = "crabe"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.707901, 10.0287 )
rotation = 1.5708
shape = SubResource( 7 )

[node name="HurtBox" parent="." instance=ExtResource( 2 )]
collision_layer = 8

[node name="HurtOutch" parent="HurtBox" index="0"]
visible = false
rotation = 1.5708
shape = SubResource( 8 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 2

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]

[node name="Pzone" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.156863 )
shape = SubResource( 9 )

[node name="HitBox" parent="." instance=ExtResource( 6 )]
collision_mask = 4

[node name="Hit" parent="HitBox" index="0"]
visible = false
position = Vector2( -1.32582, 1.76777 )
shape = SubResource( 10 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]

[node name="Soft" parent="SoftCollision" index="0"]
visible = false
position = Vector2( -1.40308, 2.57231 )
shape = SubResource( 11 )

[node name="wanderControler" parent="." instance=ExtResource( 9 )]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="HurtBox"]

[editable path="PlayerDetectionZone"]

[editable path="HitBox"]

[editable path="SoftCollision"]
